feat(android): support for Fabric  - SimpleMap example works for android  - more events to support Fabric interface  - initial FabricMarker support for android